TM-17213 - fix current password label too close with input element

--- a/src/main/webapp/tds/web-app/css/page/module/user/user-edit-person.component.sass
+++ b/src/main/webapp/tds/web-app/css/page/module/user/user-edit-person.component.sass
@@ -12,7 +12,7 @@
     border: 1px solid #63a242
     padding: 5px 0
   .name
-    width: 100px!important
+    width: 115px!important
     white-space: normal!important
   .value
     kendo-dropdownlist
